k8s/keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: sso-pilot
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
